# adaptive-tutor-allocation-engine

./: .env.example  .gitignore  README.md  SUBMISSION.md  docker-compose.yml
submission/: README.md  SUBMISSION.md  sample_run_results.json  sample_run_summary.md
triage-frontend/: .dockerignore  .env.example  Dockerfile.dev  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
triage-frontend/src/: main.tsx
triage-frontend/src/app/: App.tsx  providers.tsx
triage-pipeline/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
triage-pipeline/alembic/: env.py
triage-pipeline/alembic/versions/: 0001_initial.py
triage-pipeline/configs/: prometheus.yml
triage-pipeline/configs/grafana/provisioning/dashboards/: dashboards.yml
triage-pipeline/docs/: architecture.md  prompts.md  runbook.md
triage-pipeline/docs/adr/: 001-langgraph-over-celery.md  002-typeddict-state-pydantic-boundary.md  003-deterministic-escalation-triggers.md  004-litellm-over-langchain-fallbacks.md  005-arq-over-celery.md  README.md
triage-pipeline/prompts/_shared/: safety.j2
triage-pipeline/prompts/classification/: prompt.meta.yaml  ticket_classify_v1.j2
triage-pipeline/prompts/classification/examples/: few_shot.yaml
triage-pipeline/prompts/enrichment/: extract_v1.j2  prompt.meta.yaml
triage-pipeline/prompts/summarization/: prompt.meta.yaml  summary_v1.j2
triage-pipeline/scripts/: run_samples.py
triage-pipeline/src/app/: __init__.py  main.py
triage-pipeline/src/app/api/: deps.py  health.py
triage-pipeline/src/app/api/v1/: escalations.py  ingest.py  tickets.py
triage-pipeline/src/app/core/: config.py  db.py  logging.py
triage-pipeline/src/app/graph/: __init__.py  builder.py  edges.py  state.py
triage-pipeline/src/app/graph/nodes/: __init__.py  classify.py  enrich.py  escalate.py  ingest.py  output.py  route.py
triage-pipeline/src/app/llm/: __init__.py  gateway.py  tracking.py
triage-pipeline/src/app/models/: __init__.py  audit.py  escalation.py  llm_call.py  message.py  prompt_version.py  ticket.py
triage-pipeline/src/app/observability/: metrics.py
triage-pipeline/src/app/prompts/: __init__.py  registry.py
triage-pipeline/src/app/repositories/: __init__.py  audit_repo.py  escalation_repo.py  ticket_repo.py
triage-pipeline/src/app/schemas/: __init__.py  api.py  triage.py
triage-pipeline/src/app/services/: __init__.py  triage_service.py
triage-pipeline/src/app/workers/: __init__.py  queue.py
triage-pipeline/tests/: conftest.py
triage-pipeline/tests/graph/: test_brief_samples.py  test_graph_e2e.py
triage-pipeline/tests/unit/: test_escalation_triggers.py  test_json_extraction.py  test_prompts.py  test_schemas.py
(+36 files in other folders)
